--- a/IotBay/pom.xml
+++ b/IotBay/pom.xml
@@ -18,6 +18,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>sqlite</groupId>
+            <artifactId>jdbc</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>${jakartaee}</version>
